--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-        Linux kernel release 4.x <http://kernel.org/>
+  ##This tree is for build recovery (TWRP, PBRP, OFOX, SHRP etc.)
+  Linux kernel release 4.x <http://kernel.org/>
 
 These are the release notes for Linux version 4.  Read them carefully,
 as they tell you what this is all about, explain how to install the
